--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <section id="promo">
         <h2>Promo Spesial Bulan Ini!</h2>
         <p>Informasi mengenai diskon khusus, paket servis, atau penawaran menarik lainnya yang berlaku selama periode tertentu.</p>
-        <a href="#promo-details" class="cta-button">Lihat Detail Promo</a>
+        <a href="https://www.instagram.com/acc_auto_care_center" class="cta-button">Lihat Detail Promo</a>
     </section>
-
+               
     <!-- Section 5: Lokasi dan Kontak Kami -->
     <section id="contact">
         <h2>Kunjungi Bengkel Kami</h2>
